# HW_CMake

Work1/: CMakeLists.txt  main.cpp
Work2/: CMakeLists.txt
