cmake_minimum_required(VERSION 3.22.0)
project(Classes)
add_executable(figure Main.cpp Equilateral.cpp Equilateral.h Isosceles.cpp Isosceles.h Parallelogram.cpp 
parallelogram.h Quadrilateral.cpp Quadrilateral.h Rectangle.cpp Rectangle.h Rhomb.cpp 
Rhomb.h Right.cpp Right.h Square.cpp Square.h Triangle.cpp Triangle.h)